fixed all my pointers otp
