# internal/wallets/wallet.dto.go
@@ -4,6 +4,6 @@ package wallets
 
 
 
-type creditWalletRequest struct {
+type CreditWalletRequest struct {
     Amount float64 `json:"amount" validate:"gt=0"`
 }
